# ai-ching-new

./: .gitignore  add_vietnamese.py  add_vietnamese_accents.py  brace_analysis.txt  ios_build_log.txt
.circleci/: config.yml
.github/workflows/: ios-build.yml  minimal.yml  test-linux.yml  test-runner.yml
cli/: pyproject.toml
cli/src/aich/: __init__.py  __main__.py  cli.py  config.py  github.py
cli/src/aich.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/src/aich/commands/: __init__.py  artifact.py  build.py  log.py  status.py  test.py
ios/: project.yml
ios/AiChing/: Info.plist
ios/AiChing/App/: AiChingApp.swift
ios/AiChing/Extensions/: AncientWisdom.swift  DesignSystem.swift  IChingSymbols.swift  Localization.swift  SettingsDrawer.swift  View+Extensions.swift
ios/AiChing/Models/: EntropyPayload.swift  Hexagram.swift  LineValue.swift  RitualStep.swift
ios/AiChing/Persistence/: StorageService.swift
ios/AiChing/Resources/: hexagrams.json
ios/AiChing/Services/: EntropyService.swift  HapticService.swift  HashingService.swift  HexagramService.swift
ios/AiChing/ViewModels/: RitualViewModel.swift
ios/AiChing/Views/: ComputationView.swift  IdleView.swift  InquiryView.swift  JournalView.swift  OracleView.swift  OverrideView.swift  SplitsView.swift  StillnessView.swift
ios/AiChingCore/: Package.swift
ios/AiChingCore/Sources/AiChingCore/: HashingService.swift  Hexagram.swift  HexagramService.swift  LineValue.swift  RitualStep.swift
ios/AiChingCore/Tests/AiChingCoreTests/: AiChingCoreTests.swift
(+1 files in other folders)
